Clean and save MAIR report

--- a/02_operator_report_cleaning.ipynb
+++ b/02_operator_report_cleaning.ipynb
@@ -6,13 +6,12 @@
     "# Clean Operator Data Reports\n",
     "Code author: Sahar H. El Abbadi\n",
     "Date started: 2022-02-22\n",
-    "Date last edited: 2022-02-23\n",
+    "Date last edited: 2022-03-23\n",
     "\n",
     "### Notes\n",
     "For Carbon Mapper, GHGSat, Kairos, and Methane Air data reports:\n",
     "- This notebook loads the raw excel file submitted by the team. It applies a team-specific function to clean the report. Output is a standardized report that will be used to generate overpass summaries in 03_summarize_results.\n",
-    "- All raw report inputs are saved in 00_raw_data. No changes are manually made to operator reports. All cleaning is handled in Python.\n",
-    "-\n"
+    "- All raw report inputs are saved in 00_raw_data. No changes are manually made to operator reports. All cleaning is handled in Python.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,8 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PerformerExperimentID                             object\nFacilityID                                       float64\nEquipmentUnitID                                  float64\nDateOfSurvey                                      object\nTimestamp (hyperspectral technologies only)       object\nStartTime                                        float64\nEndTime                                          float64\nSurveyTime                                       float64\nGas                                               object\nPlumeLength (hyperspectral technologies only)    float64\nFacilityEmissionRate                             float64\nFacilityEmissionRateUpper                        float64\nFacilityEmissionRateLower                        float64\nUncertaintyType                                  float64\nWindSpeed                                        float64\nWindDirection                                     object\nTransitDirection                                 float64\nNumberOfEmissionSourcesReported                  float64\nQC Flag                                          float64\ndtype: object"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# GHGSat Stage 1\n",
     "ghg_1_path = pathlib.PurePath('00_raw_reports', 'GHG_Stage1_submitted-2022-11-21.csv')\n",
@@ -423,7 +431,6 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import pathlib\n",
     "from methods_clean_reports import make_kairos_combo\n",
     "\n",
@@ -494,6 +501,46 @@
     "\n",
     "sciav_clean_path = pathlib.PurePath('01_clean_reports', 'sciav_1_clean.csv')\n",
     "sciav_1_clean = pd.read_csv(sciav_clean_path)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Methane Air data cleaning\n",
+    "\n",
+    "Notes :\n",
+    "- MAIR submitted an extra column with plume area, column title is PlumeLength(m)(Area)^.5\n",
+    "- Uncertainty type: they report 95% confidence interval and \"MINIMUM\" -> need to ask for clarification on this\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "# Methane Air data report\n",
+    "# Imports\n",
+    "import pandas as pd\n",
+    "import pathlib\n",
+    "from methods_clean_reports import clean_mair\n",
+    "\n",
+    "# load raw file\n",
+    "mair_path = pathlib.PurePath('00_raw_reports', 'MAIR_Stage1_submitted_2023-03-22.csv')\n",
+    "mair_1 = pd.read_csv(mair_path)\n",
+    "\n",
+    "mair_report = mair_1\n",
+    "mair_overpasses = 24\n",
+    "mair_stage = 1\n",
+    "mair_1_clean = clean_mair(mair_report, mair_overpasses, mair_stage)\n",
+    "\n",
+    "# Save Data\n",
+    "mair_1_clean.to_csv(pathlib.PurePath('01_clean_reports', 'mair_1_clean.csv'))\n"
    ],
    "metadata": {
     "collapsed": false
