Make operator_meter_data files for flight radar and stanford timestamps (waiting on Philippine for the operator_timestamps)

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -56,9 +56,10 @@
     "for timekeeper in timekeepers:\n",
     "    for operator in operators:\n",
     "        if operator == 'Scientific Aviation':\n",
-    "            pass # insert function specific for cleaning sciav data\n",
-    "        elif operator == 'MethaneAir': #TODO: Add MAIR data here\n",
-    "            pass\n",
+    "            pass # Not applicable for ScieAv\n",
+    "        elif operator == 'MethaneAir': #TODO: Waiting for final summary file for MAIR from Philippine\n",
+    "            if timekeeper != 'team':\n",
+    "                make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
     "        else:\n",
     "            make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
     "\n",
@@ -66,8 +67,7 @@
     "cm_meter = make_operator_meter_dataset('Carbon Mapper', cm_meter_raw, 'flightradar')\n",
     "ghg_meter = make_operator_meter_dataset('GHGSat', ghg_meter_raw, 'flightradar')\n",
     "kairos_meter = make_operator_meter_dataset('Kairos', kairos_meter_raw, 'flightradar')\n",
-    "#TODO: Add MAIR data here\n",
-    "# mair_meter = make_operator_meter_dataset('Methane Air', mair_meter_raw, 'flightradar')\n",
+    "mair_meter = make_operator_meter_dataset('Methane Air', mair_meter_raw, 'flightradar')\n",
     "\n"
    ],
    "metadata": {
@@ -77,26 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "start_using_sciav                                 datetime64[ns]\nend_using_sciav                                   datetime64[ns]\naverage_meters_reading_kgh_using_sciav                   float64\nstart_using_flightradar                           datetime64[ns]\nend_using_flightradar                             datetime64[ns]\naverage_meters_reading_kgh_using_flightradar             float64\nstart_using_release_times                         datetime64[ns]\nend_using_release_times                           datetime64[ns]\naverage_meters_reading_kgh_using_release_times           float64\ndtype: object"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sciav_meter_raw.dtypes"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -121,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -130,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [],
    "metadata": {
