--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -187,11 +187,24 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of the Methane Air overpasses dataframe (24) matches the highest value for overpass_id (24).\n"
+     ]
+    }
+   ],
    "source": [
     "# Check Methane Air\n",
     "\n",
-    "#TODO check Methane Air"
+    "from methods_source import load_overpass_summary, check_overpass_number\n",
+    "\n",
+    "mair_overpasses = load_overpass_summary(operator='Methane Air', stage=1, strict_discard=False)\n",
+    "mair_max_id = mair_overpasses.max()['overpass_id']\n",
+    "mair_overpasses_length = len(mair_overpasses)\n",
+    "check_overpass_number(operator='Methane Air', max_overpass_id=mair_max_id, overpasses_length=mair_overpasses_length)"
    ],
    "metadata": {
     "collapsed": false
@@ -210,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -220,7 +233,8 @@
       "\n",
       "Carbon Mapper: 11,749.1 ft\n",
       "GHGSat: 8,003.4 ft\n",
-      "Kairos: 2,758.8 ft\n"
+      "Kairos: 2,758.8 ft\n",
+      "Methane Air: 44,999.1 ft\n"
      ]
     }
    ],
@@ -233,11 +247,12 @@
     "cm_altitude = cm_overpasses.altitude_feet.mean()\n",
     "ghg_altitude = ghg_overpasses.altitude_feet.mean()\n",
     "kairos_altitude = kairos_overpasses.altitude_feet.mean()\n",
-    "#TODO add MAIR\n",
+    "mair_altitude = mair_overpasses.altitude_feet.mean()\n",
     "print('Average overpass altitude (feet) across all reported overpasses:\\n')\n",
     "print(f'Carbon Mapper: {cm_altitude:,.1f} ft')\n",
     "print(f'GHGSat: {ghg_altitude:,.1f} ft')\n",
-    "print(f'Kairos: {kairos_altitude:,.1f} ft')"
+    "print(f'Kairos: {kairos_altitude:,.1f} ft')\n",
+    "print(f'Methane Air: {mair_altitude:,.1f} ft')"
    ],
    "metadata": {
     "collapsed": false
@@ -342,7 +357,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Methane Air average daily altitude:\n",
+      "\n",
+      "           altitude_feet\n",
+      "2022-10-25 44,775.3 feet\n",
+      "2022-10-29 45,188.4 feet\n"
+     ]
+    }
+   ],
+   "source": [
+    "operator = 'Methane Air'\n",
+    "mair_alt = calc_daily_altitude(operator)\n",
+    "print(f'{operator} average daily altitude:\\n')\n",
+    "print(mair_alt.to_string(formatters={'altitude_feet':'{:,.1f} feet'.format}))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
