Run QC analysis on Carbon Mapper and Kairos

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -57,9 +57,9 @@
     "    for operator in operators:\n",
     "        if operator == 'Scientific Aviation':\n",
     "            pass # Not applicable for ScieAv\n",
-    "        elif operator == 'MethaneAir': #TODO: Waiting for final summary file for MAIR from Philippine\n",
-    "            if timekeeper != 'team':\n",
-    "                make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
+    "        # elif operator == 'MethaneAir': #TODO: Waiting for final summary file for MAIR from Philippine\n",
+    "        #     if timekeeper != 'team':\n",
+    "        #         make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
     "        else:\n",
     "            make_operator_meter_dataset(operator, meter_raw[operator], timekeeper)\n",
     "\n",
