Saving all files before running new metering code

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Setup\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Load data\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -98,16 +98,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Update to include new gas composition data\n",
+    "\n",
+    "# Load gas comp\n",
+    "import pandas as pd\n",
+    "import datetime\n",
+    "\n",
+    "def select_methane_fraction(input_datetime, gas_comp_source):\n",
+    "    \"\"\"Determines the methane mole fraction for a given datetime.\n",
+    "    Inputs:\n",
+    "      - input_datetime is a datetime object\n",
+    "      - gas_comp_source is either 'su_raw', 'su_normalized', or 'km' \"\"\"\n",
+    "\n",
+    "    # Load the clean meter data\n",
+    "    gas_comp = pd.read_csv(pathlib.PurePath('02_meter_data', 'gas_comp_clean_su_km.csv'),\n",
+    "                       nrows=15,\n",
+    "                       parse_dates=['start_utc', 'end_utc'])\n",
+    "\n",
+    "    # Determine methane mole fraction based on date brackets\n",
+    "    for index, row in gas_comp.iterrows():\n",
+    "        if (input_datetime > row['start_utc']) and (input_datetime <= row['end_utc']):\n",
+    "            methane_mole_fraction = row[gas_comp_source]\n",
+    "\n",
+    "    return methane_mole_fraction\n",
+    "\n",
+    "test_date = datetime.datetime(2022, 10, 12, 18, 13)\n",
+    "print(test_date)\n",
+    "select_methane_fraction(test_date, 'km')"
+   ],
    "metadata": {
     "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "test = pd.DataFrame({\n",
+    "    'a': [1, 2, 3],\n",
+    "    'b': [4, 5, 6]\n",
+    "})"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   a  b\n",
+      "0  1  4\n",
+      "1  2  5\n",
+      "2  3  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "test['c'] = np.nan"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   a  b   c\n",
+      "0  1  4 NaN\n",
+      "1  2  5 NaN\n",
+      "2  3  6 NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [],
+   "source": [
+    "x='a'\n",
+    "test[f'{x}_2'] = np.nan"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   a  b   c  a_2\n",
+      "0  1  4 NaN  NaN\n",
+      "1  2  5 NaN  NaN\n",
+      "2  3  6 NaN  NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
