Update meter data files to use methane mole fraction from KM

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -49,8 +49,8 @@
     "# Imports\n",
     "from methods_source import generate_all_overpass_reports\n",
     "\n",
-    "generate_all_overpass_reports(strict_discard = False, timekeeper = 'flightradar')\n",
-    "generate_all_overpass_reports(strict_discard = True, timekeeper = 'flightradar')"
+    "generate_all_overpass_reports(strict_discard=False, timekeeper='flightradar', gas_comp_source='km', time_ave='60')\n",
+    "generate_all_overpass_reports(strict_discard=True, timekeeper='flightradar', gas_comp_source='km', time_ave='60')"
    ],
    "metadata": {
     "collapsed": false
