Update description of code to make meter files

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -6,13 +6,14 @@
     "# Clean Stanford Meter Data\n",
     "Code author: Sahar H. El Abbadi\n",
     "Date started: 2022-03-11\n",
-    "Date last edited: 2022-03-11\n",
+    "Date last edited: 2022-03-28\n",
     "\n",
     "## Data description:\n",
     "Stanford metering data, cleaned according to data processing pipeline. Includes 30-s, 60-s, and 90-s average flow rates, percent methane, and whole gas measurements. Each measurement is provided for the three different timestamp metrics: Stanford timestamps, as observed from the field; operator reported timestamps; and FlightRadar timestamps.\n",
     "\n",
     "## Script objective:\n",
-    "Select data for the desired timestamp and time average. Make column names machine-readable."
+    "- Load gas flow data for each flight day and assign methane mole fraction based on KM data\n",
+    "- Make \"operator_meter\" datasets for each method of using timestamp. Use whole-gas measurements from cleaned meter data, assign appropriate methane mole fraction, and calculate average and standard deviation of the release rate in kgh CH4 for each airplane overpass"
    ],
    "metadata": {
     "collapsed": false
@@ -38,7 +39,7 @@
     "### Load daily metered release rates\n",
     "This is all the metered data for releases conducted on flight days for each airplane operator. Includes the metered flow rate, then assigns methane mole fraction based on the measurement datetime, and calculates the methane mole fraction using the Kinder Morgan methane mole fraction data.\n",
     "\n",
-    "WARNING: this script takes a long time to run!"
+    "WARNING: this script takes a long time to run! Only run if you need to recreate the .csv files"
    ],
    "metadata": {
     "collapsed": false
@@ -116,7 +117,40 @@
     }
    ],
    "source": [
-    "generate_daily_releases()"
+    "# (Commenting out for now so I don't accidentally run it)\n",
+    "\n",
+    "# generate_daily_releases()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Make operator meter files\n",
+    "Operator meter files (saved in 02_meter_data > operator_meter_data) are meter files that used as input for creating the operator overpass summary dataframe (03_results > overpass_summary), which in turn is the input for all major analysis of airplane performance.\n",
+    "\n",
+    "Operator meter files have the following columns:\n",
+    "- datetime_utc: datetime in UTC timezone, dtype is datetime object\n",
+    "- overpass_id: matches PerformerExperimentID in the operator report\n",
+    "- phase_iii: indicates if we provided the operator with the flow rate for this overpass in Phase III, with 1 meaning we gave the overpass and 0 meaning we did not\n",
+    "- kgh_gas_30: average whole gas flow rate for the 30 seconds preceding the overpass time\n",
+    "- kgh_gas_60: average whole gas flow rate for the 60 seconds preceding the overpass time\n",
+    "- kgh_gas_90: average whole gas flow rate for the 90 seconds preceding the overpass time\n",
+    "- meter: indicates which meter was used for measurement (bc = small Coriolis meter, mc = medium Coriolis meter, pc = large Coriolis meter)\n",
+    "- qc_su_discard: 0 if Stanford did NOT discard, 1 if Stanford QC does indicate this should be discarded, using lax criteria. Lax criteria is the standard for all analysis, we compare to strict in 07_qc_comparison.ipynb\n",
+    "- qc_su_discard_strict: indicates if Stanford would discard (1) with strict criteria, or keep (0) with strict criteria\n",
+    "- altitude_feet: flight altitude in feet, averaged for 60 seconds prior to the plane being directly over the release point. (Note: units in 02_meter_data > summary_files are tracking data, and are in the units reported by the tracking system. This is feet for FlightTracker and meters for Kairos' reporting system, both in units above sea level. The script clean_meter_column_names converts these to feet above ground level)\n",
+    "- methane_fraction_su_raw: methane fraction using raw values from Stanford samples as provided by Eurofins Air Toxins laboratory\n",
+    "- kgh_ch4_30_su_raw, kgh_ch4_60_su_raw, kgh_ch4_90_su_raw: calculated flow rate in kgh CH4 over 30, 60, and 90 seconds respectively, using methane_fraction_su_raw\n",
+    "- methane_fraction_su_normalized: methane fraction using Stanford samples analyzed by Eurofins Air Toxins laboratory, normalized such that the sum of all components included in the analysis adds to 100%.\n",
+    "- kgh_ch4_30_su_normalized, kgh_ch4_60_su_normalized, kgh_ch4_60_su_normalized: methane flow rate averaged over the relevant time period using methane_fraction_su_normalized\n",
+    "- methane_fraction_km: methane mole fraction provided by Kinder Morgan for gas directed to the filling points used in this analysis. We used the analysis conducted on the dates which we filled the CNG trucks, applied to all dates which those trucks were used for releases\n",
+    "- kgh_ch4_30_km, kgh_ch4_60_km, kgh_ch4_90_km: methane flow rate averaged over the relevant time period, using methane_fraction_km\n",
+    "\n",
+    "#### Scientific Aviation:\n",
+    "Note that Scientific Aviation submitted a report using non-standard template. The SciAv.csv summary file and sciav_1_overpasses overpass summary file were manually generated by Sahar El Abbadi."
    ],
    "metadata": {
     "collapsed": false
@@ -156,68 +190,6 @@
     "kairos_meter = make_operator_meter_dataset('Kairos', kairos_meter_raw, 'flightradar')\n",
     "mair_meter = make_operator_meter_dataset('Methane Air', mair_meter_raw, 'flightradar')\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pathlib\n",
-    "\n",
-    "# For Scientific Aviation, we'll use their start and end times reported by operator as this is a more accurate reflection of when they were conducting measurements\n",
-    "\n",
-    "sciav_meter = pd.DataFrame()\n",
-    "overpass_id = np.linspace(1, 18, 18)\n",
-    "sciav_meter['overpass_id'] = overpass_id\n",
-    "# datetime column set to start time to keep column heading consistent with how we handle the other operator dataframes\n",
-    "sciav_meter['datetime_utc'] = sciav_meter_raw['start_using_sciav']\n",
-    "# Create a new column specifically for measurement start and end times\n",
-    "sciav_meter['start_measurement'] = sciav_meter_raw['start_using_sciav']\n",
-    "sciav_meter['start_measurement'] = sciav_meter_raw['end_using_sciav']\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Update to include new gas composition data\n",
-    "\n",
-    "# Load gas comp\n",
-    "import pandas as pd\n",
-    "import datetime\n",
-    "\n",
-    "def select_methane_fraction(input_datetime, gas_comp_source):\n",
-    "    \"\"\"Determines the methane mole fraction for a given datetime.\n",
-    "    Inputs:\n",
-    "      - input_datetime is a datetime object\n",
-    "      - gas_comp_source is either 'su_raw', 'su_normalized', or 'km' \"\"\"\n",
-    "\n",
-    "    # Load the clean meter data\n",
-    "    gas_comp = pd.read_csv(pathlib.PurePath('02_meter_data', 'gas_comp_clean_su_km.csv'),\n",
-    "                       nrows=15,\n",
-    "                       parse_dates=['start_utc', 'end_utc'])\n",
-    "\n",
-    "    # Determine methane mole fraction based on date brackets\n",
-    "    for index, row in gas_comp.iterrows():\n",
-    "        if (input_datetime > row['start_utc']) and (input_datetime <= row['end_utc']):\n",
-    "            methane_mole_fraction = row[gas_comp_source]\n",
-    "\n",
-    "    return methane_mole_fraction\n",
-    "\n",
-    "test_date = datetime.datetime(2022, 10, 12, 18, 13)\n",
-    "print(test_date)\n",
-    "select_methane_fraction(test_date, 'km')"
    ],
    "metadata": {
     "collapsed": false
