Set default values for plotting functions (strict_discard=False, time_ave=60, gas_comp_source='km')

--- a/05_probability_of_detection.ipynb
+++ b/05_probability_of_detection.ipynb
@@ -49,7 +49,8 @@
     "gas_comp_source = 'km'\n",
     "n_bins = 5\n",
     "threshold = 25\n",
-    "plot_detection_limit(operator=operator, stage=stage, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source, n_bins=n_bins, threshold=threshold)"
+    "\n",
+    "plot_detection_limit(operator=operator, stage=stage, n_bins=n_bins,threshold=threshold, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source)"
    ],
    "metadata": {
     "collapsed": false
@@ -77,7 +78,7 @@
     "gas_comp_source = 'km'\n",
     "n_bins = 5\n",
     "threshold = 25\n",
-    "plot_detection_limit(operator=operator, stage=stage, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source, n_bins=n_bins, threshold=threshold)"
+    "plot_detection_limit(operator=operator, stage=stage, n_bins=n_bins,threshold=threshold, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source)\n"
    ],
    "metadata": {
     "collapsed": false
@@ -105,7 +106,7 @@
     "gas_comp_source = 'km'\n",
     "n_bins = 5\n",
     "threshold = 25\n",
-    "plot_detection_limit(operator=operator, stage=stage, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source, n_bins=n_bins, threshold=threshold)"
+    "plot_detection_limit(operator=operator, stage=stage, n_bins=n_bins,threshold=threshold, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source)"
    ],
    "metadata": {
     "collapsed": false
@@ -124,7 +125,7 @@
     "gas_comp_source = 'km'\n",
     "n_bins = 5\n",
     "threshold = 25\n",
-    "plot_detection_limit(operator=operator, stage=stage, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source, n_bins=n_bins, threshold=threshold)"
+    "plot_detection_limit(operator=operator, stage=stage, n_bins=n_bins,threshold=threshold, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source)"
    ],
    "metadata": {
     "collapsed": false
@@ -152,7 +153,7 @@
     "gas_comp_source = 'km'\n",
     "n_bins = 5\n",
     "threshold = 25\n",
-    "plot_detection_limit(operator=operator, stage=stage, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source, n_bins=n_bins, threshold=threshold)"
+    "plot_detection_limit(operator=operator, stage=stage, n_bins=n_bins,threshold=threshold, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source)"
    ],
    "metadata": {
     "collapsed": false
@@ -188,7 +189,7 @@
     "gas_comp_source = 'km'\n",
     "n_bins = 5\n",
     "threshold = 25\n",
-    "plot_detection_limit(operator=operator, stage=stage, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source, n_bins=n_bins, threshold=threshold)"
+    "plot_detection_limit(operator=operator, stage=stage, n_bins=n_bins,threshold=threshold, strict_discard=strict_discard, time_ave=time_ave, gas_comp_source=gas_comp_source)"
    ],
    "metadata": {
     "collapsed": false
